# xxl-admin-sh

./: LICENSE  README.md  pyproject.toml
src/xxl_admin/: client.py  commands.py  completers.py  context.py  core.py  settings.py  utils.py  xxl.py
